# company_structure_test

./: CMakeLists.txt  README.md
src/: main.cpp
src/data_access/: CompanyStructureStore.cpp  CompanyStructureStore.h
src/models/: CompanyStructure.cpp  CompanyStructure.h  Department.cpp  Department.h  Employee.cpp  Employee.h  Stateful.cpp  Stateful.h
src/viewmodels/: ChangeType.h  CompanyStructureVM.cpp  CompanyStructureVM.h  DepartmentVM.cpp  DepartmentVM.h  EmployeeVM.cpp  EmployeeVM.h  ViewModel.h
src/views/: DepartmentEdit.cpp  DepartmentEdit.h  EmployeeEdit.cpp  EmployeeEdit.h  MainWindow.cpp  MainWindow.h  TreeMenu.h  View.h
